--- a/package.json
+++ b/package.json
@@ -65,11 +65,14 @@
     "eslint": "2.x"
   },
   "dependencies": {
+    "builtin-modules": "^1.1.1",
     "doctrine": "1.2.0",
     "es6-map": "^0.1.3",
     "es6-set": "^0.1.4",
     "es6-symbol": "*",
     "eslint-import-resolver-node": "^0.2.0",
-    "object-assign": "^4.0.1"
+    "lodash.cond": "^4.3.0",
+    "object-assign": "^4.0.1",
+    "pkg-up": "^1.0.0"
   }
 }
